--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@reactive-dot/eslint-config",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "main": "index.js",
   "scripts": {
