--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,6 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "defaultBase": "main",
   "targetDefaults": {
     "dev": {
       "dependsOn": ["^build"]
@@ -16,5 +17,5 @@
       "cache": true
     }
   },
-  "defaultBase": "master"
+  "parallel": 4
 }
