feat: wallet connection management
Also remove buggy chain id scope

--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint src",
     "preview": "vite preview",
     "postinstall": "npx papi"
