--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reactive-dot/react": "workspace:^",
+    "date-fns": "^3.6.0",
     "polkadot-api": "^0.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
