--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,6 +13,7 @@
     "@types/eslint__js": "^8.42.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-tsdoc": "^0.3.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0"
   },
