--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -15,7 +15,8 @@
     "date-fns": "^3.6.0",
     "polkadot-api": "^0.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13"
   },
   "devDependencies": {
     "@reactive-dot/eslint-config": "workspace:^",
