--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@reactive-dot/react": "workspace:^",
+    "@walletconnect/modal": "^2.6.2",
+    "@walletconnect/universal-provider": "^2.13.2",
     "date-fns": "^3.6.0",
     "polkadot-api": "^0.8.0",
     "react": "^18.3.1",
