feat: hook and utility class to easily deal with planck denominated number

--- a/nx.json
+++ b/nx.json
@@ -14,8 +14,9 @@
       "cache": true
     },
     "test": {
+      "dependsOn": ["^build"],
       "cache": true
     }
   },
-  "parallel": 5
+  "parallel": 6
 }
