--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,5 +47,8 @@
     "@walletconnect/universal-provider": {
       "optional": true
     }
+  },
+  "dependencies": {
+    "@reactive-dot/utils": "workspace:^"
   }
 }
