--- a/tsconfig.typedoc.json
+++ b/tsconfig.typedoc.json
@@ -2,5 +2,5 @@
   "compilerOptions": {
     "noEmit": true
   },
-  "include": ["packages/core", "packages/react"]
+  "include": ["packages/core", "packages/react", "packages/utils"]
 }
