--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/core": "^3.4.0",
     "@docusaurus/preset-classic": "^3.4.0",
     "@mdx-js/react": "^3.0.1",
+    "@stackblitz/sdk": "^1.10.0",
     "clsx": "^2.1.1",
     "docusaurus-plugin-typedoc-api": "^4.2.0",
     "prism-react-renderer": "^2.3.1",
