--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dev": "nx run-many -t dev",
     "build": "nx run-many -t build",
     "lint": "nx run-many -t lint",
-    "test": "nx run-many -t test"
+    "test": "nx run-many -t test",
+    "postinstall": "husky"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "husky": "^9.0.11",
     "nx": "19.2.2",
     "prettier": "^3.3.1"
   }
