--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "postinstall": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "husky": "^9.0.11",
     "nx": "19.2.2",
