chore: add "license" field to all public packages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@reactive-dot/core",
   "version": "0.0.0",
+  "license": "LGPL-3.0-or-later",
   "type": "module",
   "files": [
     "src",
