--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@reactive-dot/utils",
   "version": "0.0.0",
+  "license": "LGPL-3.0-or-later",
   "type": "module",
   "files": [
     "src",
