--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -11,7 +11,7 @@ runs:
 
     - uses: actions/setup-node@v4
       with:
-        node-version-file: .nvmrc
+        node-version-file: package.json
         cache: yarn
 
     - run: yarn install --immutable
