--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "repository": "github:tien/reactive-dot",
   "private": true,
   "type": "module",
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.3.1",
   "volta": {
-    "node": "20.15.0"
+    "node": "20.15.0",
+    "yarn": "4.3.1"
   },
   "workspaces": [
     "apps/*",
