--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "main": "index.js",
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^1.5.16",
     "@eslint/compat": "^1.0.3",
     "@eslint/js": "^9.4.0",
     "@types/eslint__js": "^8.42.3",
-    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-tsdoc": "^0.3.0",
     "typescript": "^5.4.5",
