--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -20,6 +20,6 @@ jobs:
 
       - run: yarn workspaces foreach -At --no-private version 0.0.0-snapshot.$(git rev-parse --short HEAD) --immediate
 
-      - run: yarn workspaces foreach -At --no-private npm publish --access public --tag snapshot --tolerate-republish
+      - run: scripts/publish.sh
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
