--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,8 +9,8 @@
   ],
   "exports": {
     ".": {
-      "default": "./build/index.js",
-      "types": "./src/index.ts"
+      "types": "./src/index.ts",
+      "default": "./build/index.js"
     },
     "./wallets.js": {
       "default": "./build/wallets/index.js",
