chore: update packages metadata

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "polkadot",
     "react"
   ],
-  "homepage": "https://github.com/tien/reactive-dot#readme",
+  "homepage": "https://reactivedot.dev/",
   "bugs": {
     "url": "https://github.com/tien/reactive-dot/issues",
     "email": "tien.nguyenkhac@icloud.com"
