--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -18,7 +18,8 @@
     "polkadot-api": "^0.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.13"
+    "react-error-boundary": "^4.0.13",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@reactive-dot/eslint-config": "workspace:*",
