ci: use GitHub Action run number to denote snapshot version

--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run: yarn nx run-many -t build --projects="packages/*"
 
-      - run: yarn workspaces foreach -At --no-private version 0.0.0-snapshot.$(git rev-parse --short HEAD) --immediate
+      - run: yarn workspaces foreach -At --no-private version 0.0.0-snapshot.${{ github.run_number }}+$(git rev-parse --short HEAD) --immediate
 
       - run: scripts/publish.sh
         env:
