--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   "scripts": {
     "dev": "nx run-many -t dev",
     "build": "nx run-many -t build",
+    "build:packages": "nx run-many -t build --projects='packages/*'",
     "lint": "nx run-many -t lint -- --max-warnings=0",
     "test": "nx run-many -t test",
     "postinstall": "husky"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.7",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
