ci: fix changesets publish command
Using "&&" in changesets action publish command will pass
the subsequent command as additional flags to NX for some reason.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: changesets/action@v1
         with:
-          publish: yarn build:packages && scripts/publish.sh
+          publish: yarn publish:packages
           commit: "chore: version packages"
           title: "chore: version packages"
         env:
