--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -5,14 +5,6 @@ description: Checkout repository & install dependencies
 runs:
   using: composite
   steps:
-    # https://github.com/actions/setup-node/issues/899
-    - run: corepack enable
-      shell: bash
-
-    - uses: actions/setup-node@v4
-      with:
-        node-version-file: package.json
-        cache: yarn
-
+    - uses: volta-cli/action@v4
     - run: yarn install --immutable
       shell: bash
