--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,5 +47,8 @@
     "polkadot-api": "^0.11.2",
     "react": "^18.3.1",
     "typescript": "^5.5.4"
+  },
+  "peerDependencies": {
+    "react": "18.x"
   }
 }
