--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,7 +11,7 @@
     "postinstall": "npx papi"
   },
   "dependencies": {
-    "@reactive-dot/react": "workspace:*",
+    "@reactive-dot/react": "workspace:^",
     "@walletconnect/modal": "^2.6.2",
     "@walletconnect/universal-provider": "^2.14.0",
     "date-fns": "^3.6.0",
@@ -22,7 +22,7 @@
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "@reactive-dot/eslint-config": "workspace:*",
+    "@reactive-dot/eslint-config": "workspace:^",
     "@tsconfig/recommended": "^1.0.7",
     "@tsconfig/strictest": "^2.0.5",
     "@tsconfig/vite-react": "^3.0.2",
