--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,12 +34,12 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "@reactive-dot/core": "workspace:*",
+    "@reactive-dot/core": "workspace:^",
     "jotai": "^2.9.0",
     "jotai-scope": "^0.7.0"
   },
   "devDependencies": {
-    "@reactive-dot/eslint-config": "workspace:*",
+    "@reactive-dot/eslint-config": "workspace:^",
     "@tsconfig/recommended": "^1.0.7",
     "@tsconfig/strictest": "^2.0.5",
     "@types/react": "^18.3.3",
