--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -34,7 +34,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@reactive-dot/eslint-config": "workspace:*",
+    "@reactive-dot/eslint-config": "workspace:^",
     "@tsconfig/recommended": "^1.0.7",
     "@tsconfig/strictest": "^2.0.5",
     "eslint": "^9.7.0",
