--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,11 +11,12 @@
     "postinstall": "npx papi"
   },
   "dependencies": {
+    "@polkadot-api/descriptors": "portal:.papi/descriptors",
     "@reactive-dot/react": "workspace:^",
     "@walletconnect/modal": "^2.6.2",
     "@walletconnect/universal-provider": "^2.14.0",
     "date-fns": "^3.6.0",
-    "polkadot-api": "^0.11.2",
+    "polkadot-api": "^0.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
