--- a/.github/workflows/snapshot-publishing.yml
+++ b/.github/workflows/snapshot-publishing.yml
@@ -7,7 +7,7 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
-  publish-snapshot:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
