build: use linked instead of fixed packages

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
     { "repo": "tien/reactive-dot" }
   ],
   "privatePackages": false,
-  "fixed": [["@reactive-dot/*"]]
+  "linked": [["@reactive-dot/*"]]
 }
