--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -7,7 +7,9 @@
     "target": "ESNext",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "jsx": "react-jsx",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "outDir": "build"
   },
   "include": ["src"],
