--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -16,6 +16,7 @@
     "@walletconnect/modal": "^2.6.2",
     "@walletconnect/universal-provider": "^2.14.0",
     "date-fns": "^3.6.0",
+    "jotai-devtools": "^0.10.1",
     "polkadot-api": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
