--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "@polkadot-api/descriptors": "portal:.papi/descriptors",
     "@reactive-dot/react": "workspace:^",
-    "@walletconnect/modal": "^2.6.2",
-    "@walletconnect/universal-provider": "^2.14.0",
+    "@reactive-dot/wallet-walletconnect": "workspace:^",
     "date-fns": "^3.6.0",
     "jotai-devtools": "^0.10.1",
     "polkadot-api": "^1.2.0",
