--- a/packages/wallet-walletconnect/package.json
+++ b/packages/wallet-walletconnect/package.json
@@ -43,6 +43,6 @@
     "typescript": "^5.5.4"
   },
   "peerDependencies": {
-    "@reactive-dot/core": "workspace:^"
+    "@reactive-dot/core": "*"
   }
 }
