--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,9 @@ updates:
     directory: /
     schedule:
       interval: daily
+    groups:
+      development:
+        dependency-type: development
 
   - package-ecosystem: github-actions
     directory: /
