chore: exclude utils from linked packages versioning

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,7 +7,7 @@
     { "repo": "tien/reactive-dot" }
   ],
   "privatePackages": false,
-  "linked": [["@reactive-dot/*"]],
+  "linked": [["@reactive-dot/*", "!@reactive-dot/utils"]],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true
   }
