--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,8 +32,7 @@
   },
   "dependencies": {
     "@reactive-dot/core": "workspace:^",
-    "jotai": "^2.9.3",
-    "jotai-scope": "^0.7.2"
+    "jotai": "^2.9.3"
   },
   "devDependencies": {
     "@reactive-dot/eslint-config": "workspace:^",
