--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,8 +7,5 @@
     { "repo": "tien/reactive-dot" }
   ],
   "privatePackages": false,
-  "linked": [["@reactive-dot/*", "!@reactive-dot/utils"]],
-  "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
-    "onlyUpdatePeerDependentsWhenOutOfRange": true
-  }
+  "linked": [["@reactive-dot/core", "@reactive-dot/react"]]
 }
