feat: wallet & account composables

--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "lint": "eslint src",
     "preview": "vite preview",
