--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -23,10 +23,7 @@
     "src",
     "build"
   ],
-  "exports": {
-    ".": "./build/index.js",
-    "./internal.js": "./build/internal.js"
-  },
+  "exports": "./build/index.js",
   "scripts": {
     "dev": "tsc --build --watch",
     "build": "rm -rf build && tsc --build",
