--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,6 +11,7 @@
     "@types/eslint__js": "^8.42.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-tsdoc": "^0.3.0",
+    "eslint-plugin-vue": "^9.29.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.9.0"
   },
