feat: vue.js support (#245)

--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "lint": "eslint src",
     "preview": "vite preview",
-    "postinstall": "npx papi"
+    "postinstall": "papi"
   },
   "dependencies": {
     "@polkadot-api/descriptors": "portal:.papi/descriptors",
