--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,9 @@ updates:
     schedule:
       interval: daily
     groups:
+      docusaurus:
+        patterns:
+          - "@docusaurus/*"
       development:
         dependency-type: development
 
