feat(vue): `useNativeToken` & `useSpendableBalance` composables

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,6 +26,7 @@
   "exports": {
     ".": "./build/index.js",
     "./wallets.js": "./build/wallets/index.js",
+    "./internal/maths.js": "./build/maths/index.js",
     "./internal.js": "./build/internal.js"
   },
   "scripts": {
