--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,8 +27,9 @@
     ".": "./build/index.js",
     "./providers/light-client.js": "./build/providers/light-client/index.js",
     "./wallets.js": "./build/wallets/index.js",
-    "./internal/maths.js": "./build/maths/index.js",
-    "./internal.js": "./build/internal.js"
+    "./internal.js": "./build/internal.js",
+    "./internal/actions.js": "./build/actions/index.js",
+    "./internal/maths.js": "./build/maths/index.js"
   },
   "scripts": {
     "dev": "tsc --build --watch",
