--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -38,13 +38,13 @@
     "@reactive-dot/eslint-config": "workspace:^",
     "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/react": "^18.3.12",
+    "@types/react": "^19.0.0",
     "eslint": "^9.16.0",
     "polkadot-api": "^1.7.6",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "typescript": "^5.7.2"
   },
   "peerDependencies": {
-    "react": "18.x"
+    "react": "18.x || 19.x"
   }
 }
