--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,11 +45,10 @@
     "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
     "eslint": "^9.16.0",
-    "polkadot-api": "^1.7.8",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   },
   "peerDependencies": {
-    "polkadot-api": "1.x"
+    "polkadot-api": "^1.8.0"
   }
 }
