--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build:packages": "nx run-many -t build --projects='packages/*'",
     "publish:packages": "yarn build:packages && scripts/publish.sh",
     "lint": "nx run-many -t lint -- --max-warnings=0",
-    "test": "nx run-many -t test",
+    "test": "vitest",
     "postinstall": "husky"
   },
   "devDependencies": {
@@ -41,8 +41,10 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@vitest/coverage-v8": "3.0.4",
     "husky": "^9.1.7",
     "nx": "^20.4.0",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "vitest": "^3.0.4"
   }
 }
