--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,7 +35,7 @@
     "dev": "tsc --build --watch",
     "build": "rm -rf build && tsc --build",
     "lint": "eslint src",
-    "test": "vitest run"
+    "test": "vitest"
   },
   "dependencies": {
     "@reactive-dot/utils": "workspace:^",
