--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,7 +28,7 @@
     "dev": "tsc --build --watch",
     "build": "rm -rf build && tsc --build",
     "lint": "eslint src",
-    "test": "vitest run"
+    "test": "vitest"
   },
   "devDependencies": {
     "@reactive-dot/eslint-config": "workspace:^",
