ci: fix incorrect syntax

--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -2,7 +2,7 @@ name: Publishing
 
 on:
   workflow_run:
-    workflows: ["Verification"]
+    workflows: [Verification]
     branches: [main]
     types: [completed]
 
