--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,7 +2,7 @@ name: Deployment
 
 on:
   workflow_run:
-    workflows: ["Verification"]
+    workflows: [Verification]
     branches: [main]
     types: [completed]
 
