--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,14 +1,6 @@
 name: Deployment
 
-on:
-  workflow_run:
-    workflows: [Verification]
-    branches: [main]
-    types: [completed]
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+on: [workflow_call]
 
 jobs:
   deploy-documentation:
