--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -1,13 +1,6 @@
 name: Verification
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-    # Add trigger for `ready_for_review`
-    # https://github.com/changesets/action/issues/187
-    types: [opened, reopened, synchronize, ready_for_review]
+on: [workflow_call]
 
 jobs:
   verify:
@@ -21,7 +14,7 @@ jobs:
       - run: yarn build
 
       - run: yarn test run --coverage
-      - if: always()
+      - if: ${{ !cancelled() }}
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
