ci: fix concurrency group ID clash

--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -2,6 +2,8 @@ name: Publishing
 
 on: [workflow_call]
 
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
   publish:
     runs-on: ubuntu-latest
