--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,6 +2,10 @@ name: Deployment
 
 on: [workflow_call]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy-documentation:
     runs-on: ubuntu-latest
