--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,11 +46,11 @@
     "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
     "eslint": "^9.19.0",
-    "polkadot-api": "^1.8.4",
+    "polkadot-api": "^1.9.0",
     "typescript": "^5.7.3",
     "vitest": "^3.0.4"
   },
   "peerDependencies": {
-    "polkadot-api": "1.x"
+    "polkadot-api": ">= 1.9.x"
   }
 }
