ci: update concurrency group

--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -2,7 +2,7 @@ name: Publishing
 
 on: [workflow_call]
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency: ${{ github.workflow }}-${{ github.ref }}-${{ github.job }}
 
 jobs:
   publish:
