build: specify Node.js engine version in package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "node": "22.11.0",
     "yarn": "4.5.3"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "workspaces": [
     "apps/*",
     "examples/*",
