--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "dev": "tsc --build --watch",
     "build": "rm -rf build && tsc --build",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "vitest"
   },
   "dependencies": {
     "@reactive-dot/core": "workspace:^",
@@ -36,12 +37,16 @@
   },
   "devDependencies": {
     "@reactive-dot/eslint-config": "workspace:^",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
     "@types/react": "^19.0.8",
     "eslint": "^9.20.0",
+    "jsdom": "^26.0.0",
     "react": "^19.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   },
   "peerDependencies": {
     "react": "18.x || 19.x"
