chore: clean up tsconfigs

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "dev": "tsc --build --watch",
-    "build": "rm -rf build && tsc --build",
+    "build": " tsc --build --clean && tsc --build",
     "lint": "eslint src",
     "test": "vitest"
   },
