--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@reactive-dot/core": "workspace:^",
     "jotai": "^2.12.1",
+    "jotai-derive": "^0.1.2",
     "jotai-effect": "^2.0.1"
   },
   "devDependencies": {
