--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,6 +41,7 @@
     "@reactive-dot/eslint-config": "workspace:^",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
     "@types/react": "^19.0.10",
@@ -48,7 +49,8 @@
     "jsdom": "^26.0.0",
     "react": "^19.0.0",
     "typescript": "^5.8.2",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.8",
+    "wonka": "^6.3.5"
   },
   "peerDependencies": {
     "react": "19.x"
