--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,6 +8,7 @@
     "@eslint-react/eslint-plugin": "^1.49.0",
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-tsdoc": "^0.4.0",
     "eslint-plugin-vue": "^10.1.0",
