--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "index.js",
+  "exports": {
+    ".": "./index.js",
+    "./*": "./*"
+  },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.51.3",
     "@eslint/compat": "^1.2.9",
