--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@reactive-dot/eslint-config": "workspace:^",
+    "@reactive-dot/test": "workspace:^",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
