--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/preset-classic": "^3.5.2",
     "@docusaurus/remark-plugin-npm2yarn": "^3.5.2",
     "@mdx-js/react": "^3.1.0",
+    "@signalwire/docusaurus-plugin-llms-txt": "^1.2.1",
     "clsx": "^2.1.1",
     "docusaurus-plugin-typedoc-api": "^4.4.0",
     "prism-react-renderer": "^2.4.1",
