--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   ],
   "homepage": "https://reactivedot.dev/",
   "bugs": {
-    "url": "https://github.com/tien/reactive-dot/issues",
+    "url": "https://github.com/buffed-labs/reactive-dot/issues",
     "email": "tien.nguyenkhac@icloud.com"
   },
   "license": "LGPL-3.0-or-later",
   "author": "Tiến Nguyễn Khắc <tien.nguyenkhac@icloud.com> (https://tien.zone/)",
-  "repository": "github:tien/reactive-dot",
+  "repository": "github:buffed-labs/reactive-dot",
   "private": true,
   "type": "module",
   "packageManager": "yarn@4.8.1",
